# side_school_project

Doranco/: README.md  encrypt.py  pyproject.toml
mycryptinbio/: decryptedText.txt  plainText.txt  pom.xml
mycryptinbio/src/main/java/com/example/mycryptinbio/: MycryptinbioApplication.java
mycryptinbio/src/main/java/com/example/mycryptinbio/controller/: CryptoController.java
mycryptinbio/src/main/java/com/example/mycryptinbio/service/: CryptoService.java
mycryptinbio/src/main/resources/: application.properties
mycryptinbio/src/main/resources/templates/: index.html
mycryptinbio/src/test/java/com/example/mycryptinbio/: MycryptinbioApplicationTests.java
