[tool.poetry]
name = "doranco"
version = "0.1.0"
description = ""
authors = ["francoisloue <francois.loue@ynov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sshkey-tools = "^0.11.1"
paramiko = "^3.4.0"
cryptography = "^42.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
